# NCAA_FootBall_DashBoard_AI_Powered

./: README.md  api_endpoints.py  frontend_st.py  main.py  myapp.py  populate_tables.py  pyproject.toml  rough_workflow.md  schema.sql  schema_ETL.py  sql_connection.py  test.ipynb  test2.ipynb  test4.ipynb  util.py
db_csv/: COACHES.csv  CONFERENCES.csv  DIVISIONS.csv  PLAYERS.csv  PLAYER_STATISTICS.csv  RANKINGS.csv  SEASONS.csv  TEAMS.csv  VENUES.csv  players_ids  players_profiles_list  roasters_list  seasons_list  teams_id_list
